--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Саратов, поездка, путешествие, лучший город">
     <meta name="description" content="Саратов - лучший город для вашей следующей поездки. И вот вам на это n причин...">
     <title>n причин посетить Саратов</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 <!--    <link rel="stylesheet" href="outline-prototype-safe.css">-->
 </head>
 <body>
