--- a/index.html
+++ b/index.html
@@ -96,25 +96,25 @@
                 </thead>
                 <tbody>
                     <tr class="attractions-table__row">
-                        <td class="attractions-table__cell"><img src="img/Без%20названия.jpg" alt="Семен"></td>
+                        <td class="attractions-table__cell"><img src="img/Без%20названия.jpg" alt="Семен" width="300px"></td>
                         <td class="attractions-table__cell">Трамвай Семен</td>
                         <td class="attractions-table__cell">Волжская ул., 28</td>
                     </tr>
 
                     <tr class="attractions-table__row">
-                        <td class="attractions-table__cell"><img src="img/Консерватория.jpg" alt="консерватория"></td>
+                        <td class="attractions-table__cell"><img src="img/Консерватория.jpg" alt="консерватория" width="300px"></td>
                         <td class="attractions-table__cell">Консерватория</td>
                         <td class="attractions-table__cell">пр-т. Столыпина, 1</td>
                     </tr>
 
                     <tr class="attractions-table__row">
-                        <td class="attractions-table__cell"><img src="img/2000-освещённый%20мост1.jpg" alt="мост"></td>
+                        <td class="attractions-table__cell"><img src="img/2000-освещённый%20мост1.jpg" alt="мост" width="300px"></td>
                         <td class="attractions-table__cell">Мост через Волгу</td>
                         <td class="attractions-table__cell">51°31′02″ с. ш. 46°04′14″ в. д.</td>
                     </tr>
 
                     <tr class="attractions-table__row">
-                        <td class="attractions-table__cell"><img src="img/scale_1200.jpg" alt="парк" width=></td>
+                        <td class="attractions-table__cell"><img src="img/scale_1200.jpg" alt="парк" width="300px"></td>
                         <td class="attractions-table__cell">Парк Победы</td>
                         <td class="attractions-table__cell">ул. Соколовая</td>
                     </tr>
