--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Саратов, поездка, путешествие, лучший город">
     <meta name="description" content="Саратов - лучший город для вашей следующей поездки. И вот вам на это n причин...">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>n причин посетить Саратов</title>
     <link rel="stylesheet" href="./css/style.css">
 <!--    <link rel="stylesheet" href="outline-prototype-safe.css">-->
@@ -33,7 +34,7 @@
             <p class="general-info__text">Находится на правом берегу Волгоградского водохранилища реки Волги, напротив устья реки Саратовки и города Энгельса, расположенных на противоположном берегу. Расстояние 389 км от города Волгограда и 442 км от города Самары, в 858 км к юго-востоку от столицы России города Москвы.</p>
         </article>
         <aside class="clue__weather">
-            <p>сейчас в Саратове -6 °C</p>
+            <p>сейчас в Саратове -6°C</p>
         </aside>
     </div>
     <div class="reasons">
@@ -46,8 +47,8 @@
                     </blockquote>
                 <p>Но все мы знаем, что в случае Саратова нельзя забрать человека из города</p>
                     <pre class="reason__code"><code>
-        def leave_Saratov():
-            raise Exception("невозможно покинуть Саратов")
+    def leave_Saratov():
+        raise Exception("невозможно покинуть Саратов")
                     </code></pre>
 
                 </li>
@@ -90,7 +91,7 @@
                 <thead>
                     <tr class="attractions-table__row">
                         <th class="attractions-table__header">Фоточка</th>
-                        <th class="attractions-table__header">Достопримечательность</th>
+                        <th class="attractions-table__header">Название</th>
                         <th class="attractions-table__header">Адрес</th>
                     </tr>
                 </thead>
