--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>n причин посетить Саратов</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./scripts/load.js"></script>
+    <script src="./scripts/menu.js"></script>
 <!--    <link rel="stylesheet" href="outline-prototype-safe.css">-->
 </head>
 <body>
@@ -19,9 +21,9 @@
     </div>
     <nav class="header__menu menu">
         <a href="index.html" class="menu__item">Главная</a>
-        <a href="photo.html" class="menu__item">Фото</a>
-        <a href="reviews.html" class="menu__item">(Не)?смешные мемы</a>
-        <a href="souvenirs.html" class="menu__item">Сувениры</a>
+        <a href="memes.html" class="menu__item">(Не)?смешные мемы</a>
+<!--        <a href="photo.html" class="menu__item">Фото</a>-->
+        <a href="reviews.html" class="menu__item">Отзывы</a>
     </nav>
 </header>
 
@@ -76,16 +78,6 @@
          ▀▄▄▄▄▄▄▄▀</pre>
         </section>
         <section class="reason reasons__note">
-            <h2 class="reason__heading">МЕМЫ</h2>
-            <div class="gallery">
-                <img class="gallery__img" src="img/мемы/63038af676761_img_desktop.jpg" alt="Самара" width="300px">
-                <img class="gallery__img" src="img/мемы/мем1.jpg" alt = "между первой и второй вишневая" width="300px">
-                <img class="gallery__img" src="img/мемы/images.jpg" alt = "луна vs Саратов" width="300px">
-                <img class="gallery__img" src="img/мемы/funny-klev-club-p-smeshnie-kartinki-pro-saratov-29.jpg" alt = "одуванчик" width="300px">
-                <img class="gallery__img" src="img/мемы/Дрифт.jpg" alt = "веселая жизнь" width="300px">
-            </div>
-        </section>
-        <section class="reason reasons__note">
             <h2 class="reason__heading">Достопримечательности</h2>
             <table class="attractions-table">
                 <thead>
@@ -126,7 +118,8 @@
 </main>
 
 <footer class="footer">
-<q class="footer__quote">В деревню, к тетке, в глушь, в Саратов...</q>
+    <q class="footer__quote">В деревню, к тетке, в глушь, в Саратов...</q>
+    <p id="load"></p>
 </footer>
 </body>
 </html>
