--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="header__menu menu">
         <a href="index.html" class="menu__item">Главная</a>
         <a href="memes.html" class="menu__item">(Не)?смешные мемы</a>
-<!--        <a href="photo.html" class="menu__item">Фото</a>-->
+        <a href="suggestions.html" class="menu__item">Книга предложений</a>
         <a href="reviews.html" class="menu__item">Отзывы</a>
     </nav>
 </header>
@@ -36,7 +36,7 @@
             <p class="general-info__text">Находится на правом берегу Волгоградского водохранилища реки Волги, напротив устья реки Саратовки и города Энгельса, расположенных на противоположном берегу. Расстояние 389 км от города Волгограда и 442 км от города Самары, в 858 км к юго-востоку от столицы России города Москвы.</p>
         </article>
         <aside class="clue__weather">
-            <p>сейчас в Саратове -6°C</p>
+            <p>18.12 в Саратове было -6°C</p>
         </aside>
     </div>
     <div class="reasons">
