--- a/reviews.html
+++ b/reviews.html
@@ -22,7 +22,7 @@
   <nav class="header__menu menu">
     <a href="index.html" class="menu__item">Главная</a>
     <a href="memes.html" class="menu__item">(Не)?смешные мемы</a>
-<!--    <a href="photo.html" class="menu__item">Фото</a>-->
+    <a href="suggestions.html" class="menu__item">Книга предложений</a>
     <a href="reviews.html" class="menu__item">Отзывы</a>
   </nav>
 </header>
