--- a/reviews.html
+++ b/reviews.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <script src="./scripts/load.js"></script>
   <script src="./scripts/menu.js"></script>
+  <script src="./scripts/reviews.js"></script>
   <!--    <link rel="stylesheet" href="outline-prototype-safe.css">-->
 </head>
 <body>
@@ -33,18 +34,23 @@
       <h2 class="reason__heading">Отзыв от ChatGPT</h2>
       <p class="reason__text">Саратов — уютный и исторический город на Волге, который оставил приятные впечатления. Прекрасная архитектура, живописная набережная и доброжелательные люди создают атмосферу спокойствия и тепла. Прогулки по старинным улицам и посещение местных музеев — это настоящая находка для любителей истории и культуры. Город не перегружен туристами, что позволяет насладиться его настоящим шармом и уединением. Однозначно стоит посетить!</p>
     </section>
-  </div>
-  <div class="reasons">
+<!--  </div>-->
+<!--  <div class="reasons">-->
     <section class="reason reasons__note">
       <h2 class="reason__heading">ChatGPT об уточках в городском парке</h2>
       <p class="reason__text">Уточки в городском парке Саратова — настоящая радость для прогулок. Пруд с утками создает атмосферу уюта и спокойствия, а сами уточки дружелюбные и не боятся людей. Это отличное место для отдыха, особенно с детьми, где можно насладиться природой и провести время на свежем воздухе.</p>
     </section>
-  </div>
-  <div class="reasons">
+<!--  </div>-->
+<!--  <div class="reasons">-->
     <section class="reason reasons__note">
       <h2 class="reason__heading">ChatGPT о кондитерской "Яблонька"</h2>
       <p class="reason__text">Кондитерская "Яблонька" в Саратове — это настоящий рай для сладкоежек! Тут всегда свежие и вкусные десерты, особенно радует ассортимент тортов и пирогов. Внимание к деталям, качественные ингредиенты и неповторимый домашний вкус делают каждый заказ особенным. Атмосфера в кондитерской уютная, персонал вежливый. Отличное место, чтобы побаловать себя и близких вкусными сладостями!</p>
     </section>
+
+    <div class="preloader">
+      <div class="preloader__spinner"></div>
+    </div>
+    <div id="error" class="reason reasons__note"></div>
   </div>
 </main>
 
